--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
   <properties>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.compiler.source>1.8</maven.compiler.source>
+	  
+  		<sonar.organization>jahredelijah</sonar.organization>
+ 		 <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
 	</properties>
 	
 	<dependencies>
